# hsc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  QUICK_REFERENCE.md  README.md
docs/: ENVIRONMENT.md  EXAMPLES.md  REFERENCE.md
examples/: s3_functional_test.sh
src/: filters.rs  main.rs  path_utils.rs  s3_client.rs
src/commands/: cat.rs  cmp.rs  cp.rs  diff.rs  ls.rs  mb.rs  mod.rs  mv.rs  rb.rs  rm.rs  stat.rs  sync.rs
tests/: quick_test.sh  test_cat.sh  test_cmp.sh  test_config.sh  test_diff.sh  test_global_options.sh  test_multipart.sh  test_s3.sh  test_stat_comprehensive.sh  test_stat_demo.sh
